Correct alignment of label cells in RTL Hive theme
git-svn-id: http://textpattern.googlecode.com/svn/development/4.x@5519 2fea6a4d-a838-0410-917b-93a53c48e9d2

--- a/textpattern/theme/hive/css/textpattern.css
+++ b/textpattern/theme/hive/css/textpattern.css
@@ -1793,6 +1793,19 @@ span.spinner {
   width: 50%;
 }
 
+[dir="rtl"] .txp-label,
+[dir="rtl"] .txp-value {
+  float: right;
+}
+
+.txp-login .txp-label {
+	width: 31%;
+}
+
+.txp-login .txp-value {
+	width: 69%;
+}
+
 .txp-value input,
 .txp-value select {
   margin-top: -0.23076em;
@@ -1805,44 +1818,24 @@ span.spinner {
 }
 
 /* deprecated @ 4.6 */
-.edit-label,
-.login-label {
+.edit-label {
   display: inline-block;
   float: left;
-}
-
-/* deprecated @ 4.6 */
-.edit-label {
   width: 42%;
 }
 
 /* deprecated @ 4.6 */
-.login-label {
-  width: 31%;
-}
-
-/* deprecated @ 4.6 */
-.edit-value,
-.login-value {
+.edit-value {
   display: inline-block;
   float: right;
-}
-.edit-value input,
-.edit-value select,
-.login-value input,
-.login-value select {
-  margin-top: -0.23076em;
-  margin-bottom: -0.23076em;
-}
-
-/* deprecated @ 4.6 */
-.edit-value {
   width: 58%;
 }
 
 /* deprecated @ 4.6 */
-.login-value {
-  width: 69%;
+.edit-value input,
+.edit-value select {
+  margin-top: -0.23076em;
+  margin-bottom: -0.23076em;
 }
 
 /* Setup pages
